cyclic shift evaluation improvement

--- a/python/Jupyter_Notebooks/Tracker Visualizations.ipynb
+++ b/python/Jupyter_Notebooks/Tracker Visualizations.ipynb
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "C:\\Michi\\acoustic_covid_detection\\python\n"
+      "D:\\Archiv\\Studium\\Master\\6.-Semester\\Masters_Thesis\\Git\\acoustic_covid_detection\\python\n"
      ]
     }
    ],
@@ -36,7 +36,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading Tracker from: C:/Michi/acoustic_covid_detection/python/run/tracker_saves/2023-06-10_resnet18_logmel_combined_breaths_NEW_23msHop_46msFFT_fmax11000_224logmel_validatePerformanceAndSaveNetwork.pickle\n",
+      "Loading Tracker from: D:/Archiv/Studium/Master/6.-Semester/Masters_Thesis/Git/acoustic_covid_detection/python/run/tracker_saves/2023-06-10_resnet18_logmel_combined_breaths_NEW_11msHop_46msFFT_fmax11000_224logmel_resnormTests2_oneNormPerBlock.pickle\n",
       "\n",
       "Parameters used for finding the best performing epoch:\n",
       "           metric_used:                   auc_roc\n",
@@ -62,10 +62,10 @@
      "text": [
       "\n",
       "Datasets used:\n",
-      "logmel_combined_breaths_NEW_23msHop_46msFFT_fmax11000_224logmel\n",
+      "logmel_combined_breaths_NEW_11msHop_46msFFT_fmax11000_224logmel\n",
       "           dataset_class:                 <class 'datasets.ResnetLogmelDataset'>\n",
-      "           participants_file:             2023_05_02_logmel_combined_breaths_NEW_23msHop_46msFFT_fmax11000_224logmel.pickle\n",
-      "           augmented_files:               ['2023_05_21_logmel_combined_breaths_NEW_23msHop_46msFFT_fmax11000_224logmelaugmented.pickle']\n",
+      "           participants_file:             2023_05_04_logmel_combined_breaths_NEW_11msHop_46msFFT_fmax11000_224logmel.pickle\n",
+      "           augmented_files:               ['2023_05_21_logmel_combined_breaths_NEW_11msHop_46msFFT_fmax11000_224logmelaugmented.pickle']\n",
       "           train_set_label_counts:        label '0': 1013  -  label '1': 290\n",
       "           types_of_recording:            combined_breaths\n",
       "\n",
@@ -76,12 +76,12 @@
       "           sample_rate:                   22050\n",
       "           n_fft:                         8192\n",
       "           window_length:                 1024\n",
-      "           hop_size:                      512\n",
+      "           hop_size:                      256\n",
       "           fmin:                          0\n",
       "           fmax:                          11025\n",
-      "           hop_size_ms:                   23.22\n",
+      "           hop_size_ms:                   11.61\n",
       "           window_length_ms:              46.44\n",
-      "           duration_seconds:              5.2\n",
+      "           duration_seconds:              2.6\n",
       "           fft_res_hz:                    2.69\n",
       "\n",
       "Predetermined Time Domain Augmentations:\n",
@@ -90,7 +90,7 @@
       "           loss_function:                 sigmoid_focal_loss\n",
       "\n",
       "Tracker contains:\n",
-      "           parameter runs:                1\n",
+      "           parameter runs:                8\n",
       "           folds per run:                 1\n",
       "           epochs:                        350\n"
      ]
@@ -160,7 +160,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "logmel_combined_breaths_NEW_23msHop_46msFFT_fmax11000_224logmel\n",
+      "logmel_combined_breaths_NEW_11msHop_46msFFT_fmax11000_224logmel\n",
       "{'model': 'ResNet', 'optimizer': 'Adam ', 'loss_function': 'sigmoid_focal_loss'}\n"
      ]
     },
@@ -168,8 +168,8 @@
      "data": {
       "text/plain": [
        "{'dataset_class': datasets.ResnetLogmelDataset,\n",
-       " 'participants_file': '2023_05_02_logmel_combined_breaths_NEW_23msHop_46msFFT_fmax11000_224logmel.pickle',\n",
-       " 'augmented_files': ['2023_05_21_logmel_combined_breaths_NEW_23msHop_46msFFT_fmax11000_224logmelaugmented.pickle'],\n",
+       " 'participants_file': '2023_05_04_logmel_combined_breaths_NEW_11msHop_46msFFT_fmax11000_224logmel.pickle',\n",
+       " 'augmented_files': ['2023_05_21_logmel_combined_breaths_NEW_11msHop_46msFFT_fmax11000_224logmelaugmented.pickle'],\n",
        " 'train_set_label_counts': \"label '0': 1013  -  label '1': 290\",\n",
        " 'types_of_recording': 'combined_breaths'}"
       ]
@@ -198,7 +198,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6ac2b37343084fc8976194d22c9185e3",
+       "model_id": "0f7129248c9547f19ac3ea965ef0d058",
        "version_major": 2,
        "version_minor": 0
       },
@@ -275,7 +275,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7da2b597141a451ca2fc1f49fb1a3ee5",
+       "model_id": "3e9a51b58ef64d508a6bbd0c66e006ee",
        "version_major": 2,
        "version_minor": 0
       },
@@ -321,15 +321,18 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [9], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# hyperparameters = (list(tracker.crossval_runs[0].parameters.keys()))\u001b[39;00m\n\u001b[0;32m      2\u001b[0m options \u001b[38;5;241m=\u001b[39m tracker\u001b[38;5;241m.\u001b[39mget_only_varied_hyperparam_columns()\n\u001b[1;32m----> 3\u001b[0m dropdown_colorby \u001b[38;5;241m=\u001b[39m widgets\u001b[38;5;241m.\u001b[39mDropdown(options\u001b[38;5;241m=\u001b[39m[\u001b[38;5;28;01mNone\u001b[39;00m, \u001b[38;5;241m*\u001b[39moptions], value\u001b[38;5;241m=\u001b[39moptions[\u001b[38;5;241m0\u001b[39m])\n\u001b[0;32m      5\u001b[0m _ \u001b[38;5;241m=\u001b[39m widgets\u001b[38;5;241m.\u001b[39minteract(tracker\u001b[38;5;241m.\u001b[39mboxplot_run_statistics, metric\u001b[38;5;241m=\u001b[39mtracker\u001b[38;5;241m.\u001b[39mmetrics_used,\n\u001b[0;32m      6\u001b[0m                      show_n_best_runs\u001b[38;5;241m=\u001b[39mwidgets\u001b[38;5;241m.\u001b[39mIntSlider(value\u001b[38;5;241m=\u001b[39mtracker\u001b[38;5;241m.\u001b[39mn_hyperparameter_runs, \u001b[38;5;28mmin\u001b[39m\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m, \u001b[38;5;28mmax\u001b[39m\u001b[38;5;241m=\u001b[39mtracker\u001b[38;5;241m.\u001b[39mn_hyperparameter_runs),\n\u001b[0;32m      7\u001b[0m                      color_by_hyperparameter\u001b[38;5;241m=\u001b[39mdropdown_colorby,\n\u001b[0;32m      8\u001b[0m                      sort_by_current_metric\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
-      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ce57f5626413458bae6d8a27c886ae0e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Dropdown(description='metric', options=('auc_roc', 'loss', 'accuracy', 'f1_score', 'auc_…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -354,10 +357,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "92288b41-c290-41e2-8261-39883daf79e9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "824038d541e24c26b4e38ffde246190f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Dropdown(description='metric', options=('auc_roc', 'loss', 'accuracy', 'f1_score', 'auc_…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "options = tracker.get_only_varied_hyperparam_columns()\n",
     "dropdown_groupby = widgets.Dropdown(options=options, value=options[0])\n",
@@ -382,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "149a88c5-0f4d-45fc-83bf-e870f963a8af",
    "metadata": {},
    "outputs": [],
@@ -412,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "d1f46d23-85d4-48d0-8ae0-0c0681deee85",
    "metadata": {},
    "outputs": [],
@@ -423,20 +441,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "3407a633-e593-4d24-86b0-afb12c88baf4",
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [12], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m options \u001b[38;5;241m=\u001b[39m tracker\u001b[38;5;241m.\u001b[39mget_only_varied_hyperparam_columns()\n\u001b[0;32m      2\u001b[0m \u001b[38;5;66;03m# if len(options) == 0:\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;66;03m#     options = [None]\u001b[39;00m\n\u001b[1;32m----> 4\u001b[0m dropdown_colorby \u001b[38;5;241m=\u001b[39m widgets\u001b[38;5;241m.\u001b[39mDropdown(options\u001b[38;5;241m=\u001b[39m[\u001b[38;5;28;01mNone\u001b[39;00m, \u001b[38;5;241m*\u001b[39moptions], value\u001b[38;5;241m=\u001b[39moptions[\u001b[38;5;241m0\u001b[39m])\n\u001b[0;32m      5\u001b[0m _ \u001b[38;5;241m=\u001b[39m widgets\u001b[38;5;241m.\u001b[39minteract(tracker\u001b[38;5;241m.\u001b[39mshow_all_runs, \n\u001b[0;32m      6\u001b[0m                      mode\u001b[38;5;241m=\u001b[39m[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124meval\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtrain\u001b[39m\u001b[38;5;124m\"\u001b[39m], \n\u001b[0;32m      7\u001b[0m                      metric\u001b[38;5;241m=\u001b[39mtracker\u001b[38;5;241m.\u001b[39mmetrics_used, \n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     11\u001b[0m                      show_n_best_runs\u001b[38;5;241m=\u001b[39mwidgets\u001b[38;5;241m.\u001b[39mIntSlider(value\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m10\u001b[39m, \u001b[38;5;28mmin\u001b[39m\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m, \u001b[38;5;28mmax\u001b[39m\u001b[38;5;241m=\u001b[39mtracker\u001b[38;5;241m.\u001b[39mn_hyperparameter_runs),\n\u001b[0;32m     12\u001b[0m                      color_by_hyperparameter\u001b[38;5;241m=\u001b[39mdropdown_colorby)\n",
-      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a3d6ae2b52df41058dd87ef6587ce3c3",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Dropdown(description='mode', options=('eval', 'train'), value='eval'), Dropdown(descript…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -456,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "ab612294-eca8-489d-8743-794ae7278edf",
    "metadata": {
     "tags": []
@@ -474,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "a9948dab-cc00-4282-9254-04f0a52da1a2",
    "metadata": {
     "tags": []
@@ -483,12 +504,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a09ce41251824557b57d5b31fad1b62b",
+       "model_id": "12b49653498643119f9545e4aea64465",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(Dropdown(description='run_id', options=('{\\'batch\\': \\'64\\', \\'lr\\': \\'0.0005\\', \\'wd\\':…"
+       "interactive(children=(Dropdown(description='run_id', options=('{\\'batch\\': \\'64\\', \\'lr\\': \\'0.0001\\', \\'wd\\':…"
       ]
      },
      "metadata": {},
@@ -740,9 +761,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ai38",
+   "display_name": "Python (python_v3-8)",
    "language": "python",
-   "name": "ai38"
+   "name": "python_v3-8"
   },
   "language_info": {
    "codemirror_mode": {
