dicova plit compatibility & id specific loss tracking

--- a/python/Jupyter_Notebooks/Metadata_Processing.ipynb
+++ b/python/Jupyter_Notebooks/Metadata_Processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "a56e2404",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "D:\\Archiv\\Studium\\Master\\6.-Semester\\Masters_Thesis\\Git\\acoustic_covid_detection\\python\n"
+      "C:\\Michi\\acoustic_covid_detection\\python\n"
      ]
     }
    ],
@@ -1350,8 +1350,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0cc8c15a-ecdb-44fb-86b4-56217ac0b6df",
+   "metadata": {},
+   "source": [
+    "### Load Dataframes"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
+   "id": "02d6ca28-0d34-49fc-abbc-dcd11ad84556",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "full_meta_data = pd.read_csv(\"data/Coswara_processed/full_meta_data.csv\")\n",
+    "invalid_recordings_df = pd.read_csv(\"data/Coswara_processed/invalid_recordings.csv\")\n",
+    "dicova_ids = list(pd.read_csv(\"data/Coswara_processed/dicova_test_set.csv\")[\"user ID\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "id": "a973e2ce-a597-4596-b773-380c3b069488",
    "metadata": {},
    "outputs": [],
@@ -1365,7 +1385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "id": "628c8dff-fcd4-41da-80d1-c4cb53a7728a",
    "metadata": {},
    "outputs": [],
@@ -1376,7 +1396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "id": "54601b83-1019-449f-8b68-c9a608198662",
    "metadata": {},
    "outputs": [],
@@ -1390,13 +1410,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 19,
+   "id": "99fbe3ce-37e2-4237-8ab6-1c3d4a0504e3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(642, 1727)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(pos_ids), len(neg_ids)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "id": "1f26eead-b22d-4771-9ba6-0d6078651011",
    "metadata": {},
    "outputs": [],
    "source": [
-    "traineval_pos, test_pos = randomly_split_list_into_two(pos_ids, ratio=0.85, random_seed=666)\n",
-    "traineval_neg, test_neg = randomly_split_list_into_two(neg_ids, ratio=0.85, random_seed=666)"
+    "# traineval_pos, test_pos = randomly_split_list_into_two(pos_ids, ratio=0.85, random_seed=666)\n",
+    "# traineval_neg, test_neg = randomly_split_list_into_two(neg_ids, ratio=0.85, random_seed=666)\n",
+    "\n",
+    "traineval_pos = [user_id for user_id in pos_ids if user_id not in dicova_ids]\n",
+    "test_pos = [user_id for user_id in pos_ids if user_id in dicova_ids]\n",
+    "traineval_neg = [user_id for user_id in neg_ids if user_id not in dicova_ids]\n",
+    "test_neg = [user_id for user_id in neg_ids if user_id in dicova_ids]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "8431f5b1-b37a-4ee0-864c-0a27c9e51cba",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(582, 60)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(traineval_pos), len(test_pos)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "6320b6df-88e7-4c33-b31b-abf139cbfd9b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1321, 406)"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(traineval_neg), len(test_neg)"
    ]
   },
   {
@@ -1413,21 +1501,42 @@
   {
    "cell_type": "code",
    "execution_count": 28,
+   "id": "540ec40b-08f3-48cd-aa9b-db8982a1df9f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(466, 1903)"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(test_set), len(traineval_set)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "id": "2fe9ebdd-561b-41fd-8ac4-67fe492390c5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.0    260\n",
-       " 1.0     97\n",
+       "(0.0    406\n",
+       " 1.0     60\n",
        " Name: covid_label, dtype: int64,\n",
-       " 0.0    1467\n",
-       " 1.0     545\n",
+       " 0.0    1321\n",
+       " 1.0     582\n",
        " Name: covid_label, dtype: int64)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1440,29 +1549,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 32,
    "id": "c3c10f53-dea8-4a84-8861-8ddfeb09a314",
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_set_full_df.to_csv(\"data/Coswara_processed/test_set_df.csv\", index=False)\n",
-    "traineval_full_df.to_csv(\"data/Coswara_processed/train_and_validation_set_df.csv\", index=False)"
+    "test_set_full_df.to_csv(\"data/Coswara_processed/test_set_df_dicova.csv\", index=False)\n",
+    "traineval_full_df.to_csv(\"data/Coswara_processed/train_and_validation_set_df_dicova.csv\", index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 33,
    "id": "8d5f57e4-d57c-4a92-8e22-043be8ea118c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "False    357\n",
+       "False    466\n",
        "Name: recording_invalid, dtype: int64"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1950,9 +2059,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (python_v3-8)",
+   "display_name": "ai38",
    "language": "python",
-   "name": "python_v3-8"
+   "name": "ai38"
   },
   "language_info": {
    "codemirror_mode": {
