bugfixes and additional scripts for training on server

--- a/python/Jupyter_Notebooks/extract_dicova_testset_ids.ipynb
+++ b/python/Jupyter_Notebooks/extract_dicova_testset_ids.ipynb
@@ -37,7 +37,7 @@
     "metadata_dicova = pd.read_csv(r\"data\\Coswara_processed\\DiCova\\SecondDiCOVA_detailed_test_metedata.csv\")\n",
     "full_metadata = pd.read_csv(r\"data\\Coswara_processed\\full_meta_data.csv\")\n",
     "original_metadata = pd.read_csv(r\"data\\Coswara_processed\\original_metadata.csv\")\n",
-    "matches = pd.read_csv(r\"matches_469.csv\")"
+    "matches = pd.read_csv(r\"data\\Coswara_processed\\dicova_test_set_id_matches.csv\")"
    ]
   },
   {
