track individual id performance, linear regression

--- a/python/Jupyter_Notebooks/extract_dicova_testset_ids.ipynb
+++ b/python/Jupyter_Notebooks/extract_dicova_testset_ids.ipynb
@@ -1504,9 +1504,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (python_v3-8)",
+   "display_name": "ai38",
    "language": "python",
-   "name": "python_v3-8"
+   "name": "ai38"
   },
   "language_info": {
    "codemirror_mode": {
