exclude confident misclassifications

--- a/python/Jupyter_Notebooks/_linear_regression_predictions.ipynb
+++ b/python/Jupyter_Notebooks/_linear_regression_predictions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 49,
    "id": "481d4a51-353d-4f68-92c4-4312083795c8",
    "metadata": {},
    "outputs": [
@@ -22,24 +22,25 @@
     "import os\n",
     "from evaluation_and_tracking import IDPerformanceTracker\n",
     "import torch\n",
-    "from sklearn.metrics import roc_curve, auc\n",
+    "from sklearn.metrics import roc_curve, auc, confusion_matrix, precision_recall_curve\n",
     "from sklearn.linear_model import LinearRegression"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 14,
    "id": "4e9e3099-d7ef-41f5-b23f-072ac22a9997",
    "metadata": {},
    "outputs": [],
    "source": [
     "ID_PERFORMANCE_TRACKING = \"test_linearRegression.pickle\"\n",
-    "id_performance = IDPerformanceTracker(ID_PERFORMANCE_TRACKING)"
+    "id_performance = IDPerformanceTracker(ID_PERFORMANCE_TRACKING)\n",
+    "id_performance.df = id_performance.load()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 15,
    "id": "7617b0a2-5c8c-475c-9037-4a64137854b8",
    "metadata": {},
    "outputs": [
@@ -49,7 +50,7 @@
        "2898"
       ]
      },
-     "execution_count": 153,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 16,
    "id": "8cc85291-d302-41b2-96e8-69d045d319a0",
    "metadata": {},
    "outputs": [],
@@ -71,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 17,
    "id": "657d7893-83e8-49fd-b626-b114a41f2128",
    "metadata": {},
    "outputs": [
@@ -81,7 +82,7 @@
        "(360, 466)"
       ]
      },
-     "execution_count": 155,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 18,
    "id": "fd776f7b-1d01-4ce6-b88a-db4d2e593e4c",
    "metadata": {},
    "outputs": [
@@ -105,7 +106,7 @@
        "       'combined_breaths'], dtype=object)"
       ]
      },
-     "execution_count": 156,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -117,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 900,
+   "execution_count": 19,
    "id": "7488156e-8c24-4a36-8766-b886dea28553",
    "metadata": {
     "tags": []
@@ -174,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 901,
+   "execution_count": 20,
    "id": "4eadf7c4-9dab-437a-8f0c-7029f0d112c4",
    "metadata": {},
    "outputs": [
@@ -184,7 +185,7 @@
        "1.0"
       ]
      },
-     "execution_count": 901,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 902,
+   "execution_count": 21,
    "id": "5965a12f-ebe9-44cd-9eef-75a99599b87c",
    "metadata": {},
    "outputs": [],
@@ -205,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 903,
+   "execution_count": 22,
    "id": "ed088962-e254-4ab9-beb3-d235af58c2e3",
    "metadata": {},
    "outputs": [
@@ -215,7 +216,7 @@
        "array([-0.63678253, -0.19896442, -0.26176679, -0.22631815,  1.        ])"
       ]
      },
-     "execution_count": 903,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 904,
+   "execution_count": 40,
    "id": "a8305e6f-5d69-4b2f-bb7e-ebc2a1e2fe49",
    "metadata": {},
    "outputs": [],
@@ -254,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 905,
+   "execution_count": 24,
    "id": "1d9493a6-33f4-41d5-8d43-df3a4049f19f",
    "metadata": {},
    "outputs": [],
@@ -269,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 906,
+   "execution_count": 25,
    "id": "8456d629-29b0-4a66-90d8-c96ad7d603c9",
    "metadata": {},
    "outputs": [],
@@ -288,6 +289,47 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "d0f33e84-4a0a-45b8-b02b-3a1997d13fa1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_confusion_matrix_parameters(labels, predictions, threshold=0.5, verbose=False):\n",
+    "    predictions_bool = predictions > threshold\n",
+    "    labels_bool = labels > threshold\n",
+    "    confusion_mat = confusion_matrix(labels_bool, predictions_bool)\n",
+    "    mat = np.flip(confusion_mat)\n",
+    "    mat = np.concatenate([mat, np.expand_dims(mat.sum(axis=1), 1)], axis=1)\n",
+    "    mat = np.concatenate([mat, np.expand_dims(mat.sum(axis=0), 0)], axis=0)\n",
+    "    if verbose:\n",
+    "        print(\"##########################################################################\\n\")\n",
+    "        print(pd.DataFrame(mat, columns=[\"Pred. [+]\", \"Pred. [-]\", \"True Total\"],\n",
+    "                           index=[\"True [+]\", \"True [-]\", \"Pred. Total\"]))\n",
+    "\n",
+    "    # returns parameters in the following order: tn, fp, fn, tp\n",
+    "    return confusion_mat.ravel()\n",
+    "\n",
+    "def get_rates_from_confusion_matrix(confusion_mat, verbose=False):\n",
+    "    TN, FP, FN, TP = confusion_mat\n",
+    "    total_negatives = TN + FP\n",
+    "    total_positives = FN + TP\n",
+    "    tpr = round(TP / total_positives, 4)  # also known as recall\n",
+    "    tnr = round(TN / total_negatives, 4)\n",
+    "    fnr = round(FN / total_positives, 4)\n",
+    "    fpr = round(FP / total_negatives, 4)\n",
+    "    precision = round(TP / (TP + FP), 4)\n",
+    "    if verbose:\n",
+    "        print(pd.DataFrame(dict(tpr=tpr * 100, fpr=fpr * 100, tnr=tnr * 100, fnr=fnr * 100), index=[0]))\n",
+    "    return tpr, fpr, tnr, fnr, precision\n",
+    "\n",
+    "def get_auc_prec_recall(labels, predictions):\n",
+    "    precision, recall, _ = precision_recall_curve(labels, predictions)\n",
+    "    auc_preision_recall = auc(recall, precision)\n",
+    "    return auc_preision_recall"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "1a96a944-3a1f-4ea4-83a5-04af4cdde833",
    "metadata": {},
@@ -297,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 907,
+   "execution_count": 27,
    "id": "49238472-05d3-4c68-996c-f14a0017fb00",
    "metadata": {},
    "outputs": [],
@@ -308,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 908,
+   "execution_count": 28,
    "id": "ce18eb1f-f4b5-478b-9437-b72c14cf3345",
    "metadata": {},
    "outputs": [],
@@ -337,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 909,
+   "execution_count": 29,
    "id": "fac24417-76c1-48f2-bf68-8af55274a168",
    "metadata": {},
    "outputs": [],
@@ -347,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 910,
+   "execution_count": 30,
    "id": "5ddb05cb-7813-46ea-9107-5559e1e84919",
    "metadata": {},
    "outputs": [],
@@ -357,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 911,
+   "execution_count": 31,
    "id": "aac753ee-0746-4c29-902b-ecccd0165738",
    "metadata": {},
    "outputs": [
@@ -367,7 +409,7 @@
        "(360, 466)"
       ]
      },
-     "execution_count": 911,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -378,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 912,
+   "execution_count": 32,
    "id": "c54d78e3-1877-4636-ae6b-5236e70b7048",
    "metadata": {},
    "outputs": [],
@@ -389,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 918,
+   "execution_count": 33,
    "id": "6e29c90b-1aa8-4f0c-b134-1d2191e8cc83",
    "metadata": {},
    "outputs": [],
@@ -400,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 919,
+   "execution_count": 34,
    "id": "783e46c6-55c3-4adb-95e3-7d2db4e5c290",
    "metadata": {},
    "outputs": [],
@@ -410,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 920,
+   "execution_count": 35,
    "id": "05d2528e-edd4-4e66-95c7-2dcb9478b240",
    "metadata": {},
    "outputs": [
@@ -420,7 +462,7 @@
        "(90.2, 84.2)"
       ]
      },
-     "execution_count": 920,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -432,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 921,
+   "execution_count": 36,
    "id": "be371ddf-2593-4510-9b50-109a1c82c8b9",
    "metadata": {},
    "outputs": [
@@ -442,7 +484,7 @@
        "(89.4, 92.5)"
       ]
      },
-     "execution_count": 921,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -454,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 922,
+   "execution_count": 42,
    "id": "2ed785fd-8143-481c-a71c-5b9fb8b438ac",
    "metadata": {},
    "outputs": [
@@ -466,7 +508,7 @@
        "       -0.04418645, -0.0956226 ])"
       ]
      },
-     "execution_count": 922,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -476,36 +518,148 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a6543083-b4ec-427b-9a6b-88acf2f11eba",
+   "cell_type": "markdown",
+   "id": "2704e834-e0e5-43cf-a5d9-041046219fe5",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# confusion matrix"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
+   "id": "56274d4d-46d6-41b2-8041-50b44998ecff",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "##########################################################################\n",
+      "\n",
+      "             Pred. [+]  Pred. [-]  True Total\n",
+      "True [+]            70         40         110\n",
+      "True [-]            17        233         250\n",
+      "Pred. Total         87        273         360\n",
+      "     tpr  fpr   tnr    fnr\n",
+      "0  63.64  6.8  93.2  36.36\n",
+      "\n",
+      "precision 80.5\n",
+      "\n",
+      "F1: 71.1\n",
+      "AUC pr-recall: 82.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "mat = get_confusion_matrix_parameters(y_val, y_val_pred, verbose=True)\n",
+    "tpr, _, tnr, _, precision = get_rates_from_confusion_matrix(mat, verbose=True)\n",
+    "recall = tpr\n",
+    "f1_score = 2 * (precision * recall) / (precision + recall)\n",
+    "\n",
+    "print(f\"\\nprecision {round(precision*100, 1)}\")\n",
+    "print(f\"\\nF1: {round(f1_score*100, 1)}\")\n",
+    "print(f\"AUC pr-recall: {round(get_auc_prec_recall(y_val, y_val_pred)*100, 1)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
    "id": "579016c7-4993-4590-ae87-d142d0c3560e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "##########################################################################\n",
+      "\n",
+      "             Pred. [+]  Pred. [-]  True Total\n",
+      "True [+]            29         31          60\n",
+      "True [-]             4        402         406\n",
+      "Pred. Total         33        433         466\n",
+      "     tpr   fpr    tnr    fnr\n",
+      "0  48.33  0.99  99.01  51.67\n",
+      "\n",
+      "precision 87.9\n",
+      "F1: 62.4\n",
+      "AUC pr-recall: 70.4\n"
+     ]
+    }
+   ],
+   "source": [
+    "mat = get_confusion_matrix_parameters(y_test, y_test_pred, verbose=True)\n",
+    "tpr, _, tnr, _, precision = get_rates_from_confusion_matrix(mat, verbose=True)\n",
+    "recall = tpr\n",
+    "f1_score = 2 * (precision * recall) / (precision + recall)\n",
+    "\n",
+    "print(f\"\\nprecision {round(precision*100, 1)}\")\n",
+    "print(f\"F1: {round(f1_score*100, 1)}\")\n",
+    "print(f\"AUC pr-recall: {round(get_auc_prec_recall(y_test, y_test_pred)*100, 1)}\")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
+   "id": "92b9a989-cd3e-478e-8c0f-3527cea6dc41",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.4833"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "recall"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
    "id": "0cbff69c-df9b-4a91-a8cd-4e43d742eb03",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8787878787878788"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "29/(33) #precision"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "id": "93bfa406-d16f-43f6-85f4-c4221898111b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.48333333333333334"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "29/(60)"
+   ]
   },
   {
    "cell_type": "code",
